# birdc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: main.yaml  release.yaml
src/: client.rs  connection.rs  error.rs  lib.rs  message.rs
src/models/: interface.rs  mod.rs  protocol.rs  status.rs
tests/: server.rs  test_birdc.rs
