[package]
name = "birdc"
description = "Library to talk to the BIRD BGP server for administrative and instrumentation purposes"
version = "0.3.0"
authors = ["Amod Malviya @amodm"]
documentation = "https://docs.rs/birdc"
homepage = "https://github.com/amodm/birdc-rs"
repository = "https://github.com/amodm/birdc-rs"
readme = "README.md"
keywords = ["bird", "birdc", "bgp"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
log = "0.4"
tokio = { version = "1.47", features = ["net"] }
tokio-stream = "0.1"

[dev-dependencies]
env_logger = "0.11"
rand = "0.9"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "sync"] }
